--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -6,20 +6,23 @@
   /*code for Nav bar code for making a list*/
 
   text-align: center;
-  width: 100%;
   list-style: none;
   color: orangered;
   font-size: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 5vh;
 }
 
 .mainnavlink {
   /*code for Nav bar code for making a list*/
   display: flex;
   text-align: center;
-  width: 100%;
   list-style: none;
   color: rgb(0, 0, 0);
   font-size: 18px;
+  width: 200px;
 }
 
 @media (max-width: 320px) {
@@ -30,7 +33,6 @@
     text-align: center;
     list-style: none;
     color: orangered;
-    font-size: 18px;
   }
 
   .mainnavlink {
@@ -40,6 +42,7 @@
     list-style: none;
     color: rgb(0, 0, 0);
     font-size: 9px;
+    width: 200px;
   }
 }
 @media (max-width: 481px) {
@@ -49,7 +52,7 @@
     text-align: center;
     list-style: none;
     color: orangered;
-    font-size: 18px;
+    width: 300px;
   }
 
   .mainnavlink {
@@ -59,6 +62,7 @@
     list-style: none;
     color: rgb(0, 0, 0);
     font-size: 9px;
+    width: 300px;
   }
 
   /*smaller tablets */
@@ -70,7 +74,7 @@
     text-align: center;
     list-style: none;
     color: orangered;
-    font-size: 18px;
+    width: 400px;
   }
 
   .mainnavlink {
@@ -80,6 +84,7 @@
     list-style: none;
     color: rgb(0, 0, 0);
     font-size: 9px;
+    width: 400px;
   }
   /*portrait iPad */
 }
@@ -91,7 +96,7 @@
     text-align: center;
     list-style: none;
     color: orangered;
-    font-size: 18px;
+    width: 600px;
   }
 
   .mainnavlink {
@@ -101,12 +106,70 @@
     list-style: none;
     color: rgb(0, 0, 0);
     font-size: 9px;
+    width: 600px;
   }
 }
 
 @media (max-width: 1025px) {
   /*laptops */
+  .title {
+    /*code for Nav bar code for making a list*/
+
+    text-align: center;
+    list-style: none;
+    color: orangered;
+    width: 600px;
+  }
+
+  .mainnavlink {
+    /*code for Nav bar code for making a list*/
+    display: flex;
+
+    list-style: none;
+    color: rgb(0, 0, 0);
+    font-size: 9px;
+    width: 600px;
+  }
 }
 @media (max-width: 1281px) {
   /* desktops */
+  .title {
+    /*code for Nav bar code for making a list*/
+
+    text-align: center;
+    list-style: none;
+    color: orangered;
+    width: 600px;
+  }
+
+  .mainnavlink {
+    /*code for Nav bar code for making a list*/
+    display: flex;
+
+    list-style: none;
+    color: rgb(0, 0, 0);
+    font-size: 9px;
+    width: 600px;
+  }
+}
+@media (max-width: 2000px) {
+  /* desktops - large */
+  .title {
+    /*code for Nav bar code for making a list*/
+
+    text-align: center;
+    list-style: none;
+    color: orangered;
+    width: 600px;
+  }
+
+  .mainnavlink {
+    /*code for Nav bar code for making a list*/
+    display: flex;
+
+    list-style: none;
+    color: rgb(0, 0, 0);
+    font-size: 9px;
+    width: 600px;
+  }
 }
