--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -10,19 +10,9 @@
   color: orangered;
   font-size: 36px;
   display: flex;
-  justify-content: center;
   align-items: center;
   min-height: 5vh;
-}
-
-.mainnavlink {
-  /*code for Nav bar code for making a list*/
-  display: flex;
-  text-align: center;
-  list-style: none;
-  color: rgb(0, 0, 0);
-  font-size: 18px;
-  width: 200px;
+  width: 90%;
 }
 
 @media (max-width: 320px) {
