--- a/src/css/Gold.css
+++ b/src/css/Gold.css
@@ -11,14 +11,20 @@
   display: block;
 }
 
+button {
+  width: 355px;
+  height: 60px;
+  font-size: 18px;
+  padding: 15px;
+}
+
 @media (max-width: 320px) {
   .componentContainer {
     flex-direction: column;
     gap: 10px;
   }
   button {
-    width: 90%;
-    max-width: 400px;
+    max-width: 355px;
     height: 60px;
     font-size: 18px;
     padding: 15px;
@@ -31,8 +37,7 @@
     gap: 10px;
   }
   button {
-    width: 90%;
-    max-width: 400px;
+    max-width: 355px;
     height: 60px;
     font-size: 18px;
     padding: 15px;
@@ -45,8 +50,7 @@
     gap: 10px;
   }
   button {
-    width: 90%;
-    max-width: 400px;
+    max-width: 355px;
     height: 60px;
     font-size: 18px;
     padding: 15px;
