--- a/src/css/Journalcontainer.css
+++ b/src/css/Journalcontainer.css
@@ -11,10 +11,12 @@
 
 .shopItems {
   color: orangered;
+  max-width: 350px;
 }
 
 .shopItemsContainer {
   text-align: center;
+  max-width: 350px;
 }
 
 @media (max-width: 320px) {
